--- a/src/BusinessLogic/Resources/lang/de.json
+++ b/src/BusinessLogic/Resources/lang/de.json
@@ -15,8 +15,15 @@
     "curlIsNotInstalled": "cURL ist in Ihrer PHP-Installation nicht installiert oder aktiviert. Dies ist jedoch erforderlich, damit die Hintergrundaufgabe funktioniert. Bitte installieren Sie es und aktualisieren Sie diese Seite.",
     "loading": "Lädt...",
     "save": "Speichern",
+    "saveChanges": "Speichern",
+    "accept": "Akzeptieren",
     "cancel": "Abbrechen",
-    "accept": "Akzeptieren"
+    "continue": "",
+    "complete": "",
+    "add": "",
+    "edit": "",
+    "delete": "",
+    "discard": ""
   },
   "validation": {
     "requiredField": "Dies ist ein Pflichtfeld.",
@@ -24,33 +31,34 @@
     "invalidEmail": "Das Feld muss eine gültige E-Mail-Adresse sein.",
     "shortPassword": "Das Passwort muss mindestens %s Zeichen haben.",
     "invalidPhone": "Bitte geben Sie eine gültige Telefonnummer ein.",
+    "maxLength": "",
     "numeric": "Bitte geben Sie einen numerischen Wert ein.",
     "greaterThanZero": "Der Wert muss größer als 0 sein.",
-    "nonNegative": "Field cannot have a negative value.",
+    "nonNegative": "",
     "numberOfDecimalPlaces": "Das Feld muss 2 Dezimalstellen haben.",
     "integer": "Das Feld muss eine ganze Zahl sein.",
     "invalidCountryList": "Bitte wählen Sie die Zielländer aus.",
-    "invalidLanguage": "Field is not a valid language.",
-    "invalidPlatformCountry": "Field is not a valid platform country.",
-    "invalidUrl": "Field must be a valid URL.",
-    "invalidFieldValue": "Field must be set to \"%s\".",
-    "invalidMaxValue": "Maximal allowed value is %s."
+    "invalidLanguage": "",
+    "invalidPlatformCountry": "",
+    "invalidUrl": "",
+    "invalidFieldValue": "",
+    "invalidMaxValue": ""
   },
   "login": {
-    "dontHaveAccount?": "Sie haben noch kein Benutzerkonto?",
-    "register": "Registrieren",
-    "selectCountry": "Wählen Sie ein Land aus",
-    "yourAPIKey": "Ihren API-Schlüssel finden Sie unter",
-    "connectYourAccount": "Benutzerkonto verbinden",
     "apiKey": "API-Schlüssel",
-    "logIn": "Login",
-    "apiKeyIncorrect": "Falscher API-Schlüssel"
+    "apiKeyIncorrect": "Falscher API-Schlüssel",
+    "dontHaveAccount": "",
+    "welcome": "",
+    "connectYourService": "",
+    "validateApiKey": "",
+    "chooseYourCountry": "",
+    "registerMe": ""
   },
   "register": {
-    "logIn": "Log in",
-    "email": "Email",
+    "logIn": "",
+    "email": "",
     "password": "Passwort",
-    "haveAccount": "Already have an account?",
+    "haveAccount": "",
     "startEnjoying": "Genießen Sie ab jetzt Packlink PRO!",
     "registerAccount": "Jetzt registrieren",
     "getToKnowYou": "Wir möchten Sie besser kennenlernen, um uns an Sie anzupassen und Ihnen ein individuelles Angebot zukommen zu lassen",
@@ -59,8 +67,9 @@
     "termsAndConditions": "<pre>Ich akzeptiere die <a href=\"%s\" target=\"_blank\">Nutzungsbedingungen</a> und die <a href=\"%s\" target=\"_blank\">Datenschutzerklärung</a> von Packlink</pre>",
     "marketingEmails": "Ich ermächtige Packlink Shipping S.L., mir kommerzielle Mitteilungen per E-Mail zuzusenden",
     "submit": "Registrieren",
-    "chooseYourCountry": "Elige tu país",
-    "searchCountry": "Busca el pais",
+    "chooseYourCountry": "",
+    "searchCountry": "",
+    "invalidDeliveryVolume": "",
     "ES": "Spain",
     "DE": "Germany",
     "FR": "France",
@@ -75,79 +84,73 @@
     "HU": "Hungary"
   },
   "onboardingWelcome": {
-    "header": "Let's set up basic information so that you can make shipments",
-    "steps": "It's just two steps that we need to go through to offer you the carrier that best suits your needs",
-    "stepOne": "Set parcel details",
-    "stepTwo": "Set sender's address",
-    "startSetUp": "Start set up"
+    "header": "",
+    "steps": "",
+    "stepOne": "",
+    "stepTwo": "",
+    "startSetUp": ""
   },
   "onboardingOverview": {
-    "header": "Almost there! Please check that the information entered is correct, or complete it in order to continue.",
-    "parcelDetails": "Parcel details",
-    "senderAddress": "Sender's Address",
-    "missingInfo": "Missing information",
-    "parcelData": "Weight %s kg | Height %s cm | Width %s cm | Length %s cm",
+    "header": "",
+    "parcelDetails": "",
+    "senderAddress": "",
+    "missingInfo": "",
+    "parcelData": "Gewicht %s kg | Höhe %s cm | Breite %s cm | Länge %s cm",
     "warehouseData": "%s | %s | %s"
   },
   "defaultParcel": {
-    "weight": "Weight",
-    "height": "Height",
-    "width": "Width",
-    "length": "Length",
-    "save": "Save"
-  },
-  "onboardingParcel": {
-    "header": "Set parcel details",
-    "info": "We will use this default data for <strong>items that do not have defined <br> dimensions and weight.</strong> You can edit them whenever you like <br> via the settings tab."
-  },
-  "dashboard": {
-    "almostThere": "Fast geschafft!",
-    "detailsSynced": "Daten, die mit Ihrem Packlink PRO-Konto verknüpft sind",
-    "setDefaultParcel": "Standardpaket einrichten",
-    "setDefaultWarehouse": "Voreingestellte Adresse einrichten",
-    "justFewMoreSteps": "Nur noch wenige Schritte, um die Einrichtung abzuschließen",
-    "selectShippingServices": "Versanddienste auswählen"
-  },
-  "warehouseSettings": {
-    "defaultWarehouse": "Voreingestellte Adresse",
-    "setDefaultWarehouse": "Voreingestellte Adresse einrichten",
-    "defaultWarehouseAddress": "Wir verwenden die voreingestellte Adresse als Absenderadresse. Sie können Ihre Eingaben jederzeit ändern.",
-    "warehouseName": "Name der voreingestellten Adresse",
-    "contactPersonName": "Name der Kontaktperson",
-    "contactPersonSurname": "Nachname der Kontaktperson",
-    "companyName": "Unternehmen",
-    "cityOrPostal": "Stadt oder Postleitzahl",
-    "address": "Straße und Hausnummer",
-    "phone": "Telefonnummer",
-    "email": "E-Mail-Adresse",
-    "saveChanges": "Speichern",
-    "fieldRequired": "Dies ist ein Pflichtfeld.",
-    "fieldValidNumber": "Bitte geben Sie einen numerischen Wert ein.",
-    "fieldInvalid": "Ihre Eingabe ist ungültig.",
-    "fieldTwoDecimals": "Das Feld muss 2 Dezimalstellen haben.",
-    "fieldInteger": "Das Feld muss eine ganze Zahl sein.",
-    "fieldValidEmail": "Das Feld muss eine gültige E-Mail-Adresse sein.",
-    "postalCodeNotCorrect.": "Die Postleitzahl ist nicht korrekt.",
-    "fieldValidPhone": "Bitte geben Sie eine gültige Telefonnummer ein."
-  },
-  "parcelSettings": {
-    "defaultParcel": "Standardpaket",
-    "setDefaultParcel": "Standardpaket einrichten",
-    "defaultParcelInfo": "Wir verwenden das Daten des Standardpakets, wenn für ein Produkt keine Abmaße und kein Gewicht definiert wurden. Sie können Ihre Eingaben jederzeit ändern.",
+    "title-onboarding": "",
+    "description-onboarding": "",
+    "title-config": "",
+    "description-config": "",
     "weight": "Gewicht",
-    "width": "Breite",
-    "length": "Länge",
     "height": "Höhe",
-    "valuePositive": "Der Wert muss größer als 0 sein.",
-    "saveChanges": "Speichern",
-    "weightMustBePositive": "Das Gewicht muss eine positive Dezimalzahl sein.",
-    "fieldMustBePositive": "Das Feld muss eine positive ganze Zahl sein."
+    "width": "Breite",
+    "length": "Länge"
   },
-  "mapOrderStatuses": {
-    "title": "Order status",
-    "description": "With Packlink you can update your %s order status with shipping information. <br>You can edit it at any time.",
-    "packlinkProShipmentStatus": "Packlink PRO <strong>SHIPMENT</strong> STATUS",
-    "systemOrderStatus": "%s <strong>ORDER STATUS</strong>",
+  "defaultWarehouse": {
+    "title-onboarding": "",
+    "description-onboarding": "",
+    "title-config": "",
+    "description-config": "",
+    "alias": "",
+    "alias-placeholder": "",
+    "name": "Name der Kontaktperson",
+    "name-placeholder": "",
+    "surname": "Nachname der Kontaktperson",
+    "surname-placeholder": "",
+    "company": "Unternehmen",
+    "company-placeholder": "",
+    "country": "",
+    "postal_code": "Stadt oder Postleitzahl",
+    "postal_code-placeholder": "-",
+    "address": "Straße und Hausnummer",
+    "address-placeholder": "",
+    "phone": "Telefonnummer",
+    "phone-placeholder": "",
+    "email": "E-Mail-Adresse",
+    "email-placeholder": ""
+  },
+  "configuration": {
+    "menu": "",
+    "title": "",
+    "orderStatus": "",
+    "warehouse": "",
+    "parcel": "Standardpaket",
+    "help": "Hilfe",
+    "contactUs": "Kontaktieren Sie uns:",
+    "systemInfo": "Systeminformationen"
+  },
+  "systemInfo": {
+    "title": "",
+    "debugMode": "Debug mode",
+    "download": "Systeminfodatei herunterladen"
+  },
+  "orderStatusMapping": {
+    "title": "",
+    "description": "",
+    "packlinkProShipmentStatus": "<strong>VERSANDSTATUS</strong> von Packlink PRO",
+    "systemOrderStatus": "<strong>BESTELLSTATUS</strong> von %s",
     "none": "Leer",
     "pending": "Ausstehend",
     "processing": "In Bearbeitung",
@@ -157,9 +160,25 @@
     "cancelled": "Storniert"
   },
   "shippingServices": {
+    "myServices": "",
+    "noServicesTitle": "",
+    "noServicesDescription": "",
+    "addService": "",
+    "addNewService": "",
+    "addedSuccessTitle": "",
+    "addedSuccessDescription": "",
+    "deletedSuccessTitle": "",
+    "deletedSuccessDescription": "",
+    "disableCarriersTitle": "",
+    "disableCarriersDescription": "",
     "successfullyDisabledShippingMethods": "Versanddienste erfolgreich deaktiviert.",
     "failedToDisableShippingMethods": "Versanddienste konnten nicht deaktiviert werden.",
-    "pickShippingService": "Add delivery services",
+    "pickShippingService": "",
+    "failedGettingServicesTitle": "",
+    "failedGettingServicesSubtitle": "",
+    "retry": "",
+    "filterModalTitle": "",
+    "applyFilters": "",
     "type": "Typ",
     "national": "National",
     "international": "International",
@@ -172,54 +191,60 @@
     "parcelDestination": "Zielort des Pakets",
     "pickup": "Abholung im Paketshop",
     "delivery": "Zustellung an Adresse",
-    "carrier": "Versandpartner",
     "carrierLogo": "Logo des Versandunternehmens",
+    "carrier": "Versandpartner",
+    "serviceTitle": "",
+    "serviceTitleDescription": "",
     "transitTime": "Versandlaufzeit",
     "origin": "Absender",
     "destination": "Empfänger",
+    "myPrices": "",
     "packlinkPrices": "Packlink-Preise",
+    "configureService": "",
     "showCarrierLogo": "Meinen Kunden das Logo anzeigen",
+    "pricePolicy": "",
+    "pricePolicyDescription": "",
+    "configurePricePolicy": "",
+    "taxClassTitle": "",
     "tax": "Steuer",
-    "increase": "Erhöhen",
-    "reduce": "Reduzieren",
-    "by": "um",
+    "serviceCountriesTitle": "",
+    "serviceCountriesDescription": "",
+    "openCountries": "",
+    "allCountriesSelected": "",
+    "oneCountrySelected": "",
+    "selectedCountries": "",
+    "firstPricePolicyDescription": "",
+    "addFirstPolicy": "",
+    "addAnotherPolicy": "",
     "from": "Von",
     "to": "Bis",
     "price": "Preis",
-    "select": "Auswählen"
-  },
-  "shippingServicesSettings": {
-    "filterServices": "Versanddienste filtern",
-    "addServiceTitle": "Name des Versanddienstes festlegen",
-    "titleWillBeVisible": "Dieser Name wird Ihren Kunden angezeigt",
-    "serviceTitle": "Name des Versanddienstes",
-    "selectPricingPolicy": "Preispolitik wählen",
-    "choosePricingPolicy": "Wählen Sie die Preispolitik, die Sie Ihren Kunden anzeigen möchten",
-    "percentagePacklinkPrices": "%-Satz der Packlink-Preise",
-    "fixedPrices": "Feste Preise",
-    "packlinkPercent": "Packlink-Prozentsatz",
-    "configure": "Einstellen",
-    "allShippingServices": "Alle Versanddienste",
-    "selectedShippingServices": "Ausgewählte Versanddienste",
-    "shippingServices": "Versanddienste",
-    "showingPercentsResults": "Es werden %s Ergebnisse angezeigt",
-    "setPricingRule": "Bitte legen Sie eine Preisregel fest",
-    "addPriceForWeightCriteria": "Bitte fügen Sie für jede Gewichtskategorie einen Preis hinzu",
-    "addPriceForPriceCriteria": "Bitte geben Sie den Preis für jedes Preiskriterium an",
-    "fixedPricesTotalWeight": "Festpreise basierend auf dem Gesamtgewicht",
-    "fixedPricesTotalPrice": "Festpreise basierend auf dem Gesamtpreis",
-    "addPrice": "Preis hinzufügen",
-    "gettingAvailableShippingService": "Wir suchen verfügbare Versanddienste von Packlink PRO, bitte haben Sie einen Moment Geduld.",
-    "shippingServiceSuccessfullySaved": "Versanddienst erfolgreich gespeichert.",
-    "congrats": "Glückwunsch! Ihr erster Versanddienst wurde erfolgreich erstellt.",
-    "disablePreviousCarriers": "Um Ihnen den bestmöglichen Service zu bieten, ist es wichtig, dass Sie Ihre bisherigen Versanddienstleister deaktivieren. Möchten Sie, dass wir diese deaktivieren? (empfohlen)",
-    "shippingMethodSuccessfullySelected.": "Versanddienst erfolgreich ausgewählt.",
-    "failedToDeselectShippingMethod": "Versanddienst konnte nicht abgewählt werden.",
-    "shippingMethodSuccessfullyDeselected": "Versanddienst erfolgreich abgewählt.",
-    "failedToSaveShippingMethod": "Versanddienst konnte nicht gespeichert werden.",
-    "failedToActivateShippingMethod": "Versanddienst konnte nicht aktiviert werden.",
-    "successfullyDeletedShippingMethods": "Versanddienste erfolgreich gelöscht.",
-    "shippingMethodsDeleteFailed": "Versanddienste konnten nicht gelöscht werden."
+    "rangeTypeExplanation": "",
+    "rangeType": "",
+    "priceRange": "",
+    "priceRangeWithData": "",
+    "weightRange": "",
+    "weightRangeWithData": "",
+    "weightAndPriceRange": "",
+    "weightAndPriceRangeWithData": "",
+    "singlePricePolicy": "",
+    "pricePolicyExplanation": "",
+    "packlinkPrice": "",
+    "percentagePacklinkPrices": "",
+    "percentagePacklinkPricesWithData": "",
+    "fixedPrices": "",
+    "fixedPricesWithData": "",
+    "increaseExplanation": "",
+    "reduceExplanation": "",
+    "select": "Auswählen",
+    "invalidRange": "",
+    "increase": "Erhöhen",
+    "reduce": "Reduzieren",
+    "selectAllCountries": "",
+    "selectCountriesHeader": "",
+    "selectCountriesSubheader": "",
+    "usePacklinkRange": "",
+    "discardChangesQuestion": ""
   },
   "orderListAndDetails": {
     "packlinkOrderDraft": "Packlink Auftragsentwurf",
