--- a/src/BusinessLogic/Resources/lang/it.json
+++ b/src/BusinessLogic/Resources/lang/it.json
@@ -15,8 +15,15 @@
     "curlIsNotInstalled": "cURL non installato o abilitato nella tua installazione PHP. È necessario per il corretto funzionamento dell’attività in background. Installalo e aggiorna la pagina.",
     "loading": "Caricamento in corso...",
     "save": "Salva",
+    "saveChanges": "Salva le modifiche",
+    "accept": "Accetto",
     "cancel": "Annulla",
-    "accept": "Accetto"
+    "continue": "",
+    "complete": "",
+    "add": "",
+    "edit": "",
+    "delete": "",
+    "discard": ""
   },
   "validation": {
     "requiredField": "Questo campo è obbligatorio.",
@@ -24,43 +31,45 @@
     "invalidEmail": "Il campo deve essere un email valido.",
     "shortPassword": "La password deve contenere almeno %s caratteri.",
     "invalidPhone": "Questo campo deve contenere un numero di telefono valido.",
+    "maxLength": "",
     "numeric": "Questo valore deve essere numerico.",
-    "greaterThanZero": "Value must be greater than 0.",
-    "nonNegative": "Field cannot have a negative value.",
+    "greaterThanZero": "",
+    "nonNegative": "",
     "numberOfDecimalPlaces": "Il campo deve contenere due decimali.",
     "integer": "Il campo deve essere un numero intero.",
     "invalidCountryList": "Devi selezionare i paesi di destinazione.",
-    "invalidLanguage": "Field is not a valid language.",
-    "invalidPlatformCountry": "Field is not a valid platform country.",
-    "invalidUrl": "Field must be a valid URL.",
-    "invalidFieldValue": "Field must be set to \"%s\".",
-    "invalidMaxValue": "Maximal allowed value is %s."
+    "invalidLanguage": "",
+    "invalidPlatformCountry": "",
+    "invalidUrl": "",
+    "invalidFieldValue": "",
+    "invalidMaxValue": ""
   },
   "login": {
-    "dontHaveAccount?": "Non hai un account?",
-    "register": "Registrati",
-    "selectCountry": "Seleziona il paese per iniziare",
-    "yourAPIKey": "Puoi trovare la tua API Key su",
-    "connectYourAccount": "Connetti il tuo account",
     "apiKey": "API Key",
-    "logIn": "Accedi",
-    "apiKeyIncorrect": "API Key non corretta"
+    "apiKeyIncorrect": "API Key non corretta",
+    "dontHaveAccount": "",
+    "welcome": "",
+    "connectYourService": "",
+    "validateApiKey": "",
+    "chooseYourCountry": "",
+    "registerMe": ""
   },
   "register": {
-    "logIn": "Log in",
-    "email": "Email",
+    "logIn": "",
+    "email": "",
     "password": "Password",
-    "haveAccount": "Already have an account?",
+    "haveAccount": "",
     "startEnjoying": "Inizia a usufruire di Packlink PRO!",
     "registerAccount": "Registrati",
     "getToKnowYou": "Vogliamo conoscerti meglio per adattarci a te e preparare una proposta personalizzata per te",
     "monthlyShipmentVolume": "Quante spedizioni fai solitamente al mese?",
-    "phone": "Phone number",
+    "phone": "",
     "termsAndConditions": "<pre>Accetto i <a href=\"%s\" target=\"_blank\">Termini del servizio</a> e l’<a href=\"%s\" target=\"_blank\">Informativa sulla privacy</a> di Packlink</pre>",
     "marketingEmails": "Autorizzo Packlink Shipping S.L. a inviarmi comunicazioni commerciali via email",
     "submit": "Registrati",
-    "chooseYourCountry": "Choose your country",
-    "searchCountry": "Busca el pais",
+    "chooseYourCountry": "",
+    "searchCountry": "",
+    "invalidDeliveryVolume": "",
     "ES": "Spain",
     "DE": "Germany",
     "FR": "France",
@@ -75,79 +84,73 @@
     "HU": "Hungary"
   },
   "onboardingWelcome": {
-    "header": "Let's set up basic information so that you can make shipments",
-    "steps": "It's just two steps that we need to go through to offer you the carrier that best suits your needs",
-    "stepOne": "Set parcel details",
-    "stepTwo": "Set sender's address",
-    "startSetUp": "Start set up"
+    "header": "",
+    "steps": "",
+    "stepOne": "",
+    "stepTwo": "",
+    "startSetUp": ""
   },
   "onboardingOverview": {
-    "header": "Almost there! Please check that the information entered is correct, or complete it in order to continue.",
-    "parcelDetails": "Parcel details",
-    "senderAddress": "Sender's Address",
-    "missingInfo": "Missing information",
-    "parcelData": "Weight %s kg | Height %s cm | Width %s cm | Length %s cm",
+    "header": "",
+    "parcelDetails": "",
+    "senderAddress": "",
+    "missingInfo": "",
+    "parcelData": "Peso %s kg | Altezza %s cm | Largezza %s cm | Lunghezza %s cm",
     "warehouseData": "%s | %s | %s"
   },
   "defaultParcel": {
-    "weight": "Weight",
-    "height": "Height",
-    "width": "Width",
-    "length": "Length",
-    "save": "Save"
-  },
-  "onboardingParcel": {
-    "header": "Set parcel details",
-    "info": "We will use this default data for <strong>items that do not have defined <br> dimensions and weight.</strong> You can edit them whenever you like <br> via the settings tab."
-  },
-  "dashboard": {
-    "almostThere": "Ci sei quasi!",
-    "detailsSynced": "Dati sincronizzati con il tuo account di Packlink PRO",
-    "setDefaultParcel": "Imposta i dettagli del pacco predefinito",
-    "setDefaultWarehouse": "Imposta i dettagli dell'indirizzo di ritiro predefinito",
-    "justFewMoreSteps": "Mancano pochi passaggi per completare la configurazione",
-    "selectShippingServices": "Seleziona i servizi di spedizione"
-  },
-  "warehouseSettings": {
-    "defaultWarehouse": "Indirizzo di ritiro predefinito",
-    "setDefaultWarehouse": "Imposta l'indirizzo di ritiro predefinito",
-    "defaultWarehouseAddress": "Utilizzeremo l'indirizzo di ritiro predefinito come indirizzo del mittente. Potrai modificarlo in qualsiasi momento.",
-    "warehouseName": "Nome dell'indirizzo",
-    "contactPersonName": "Nome della persona di contatto",
-    "contactPersonSurname": "Cognome della persona di contatto",
-    "companyName": "Nome dell'azienda",
-    "cityOrPostal": "Città o codice postale",
-    "address": "Indirizzo",
-    "phone": "Numero di telefono",
-    "email": "Email",
-    "saveChanges": "Salva le modifiche",
-    "fieldRequired": "Questo campo è obbligatorio",
-    "fieldValidNumber": "Questo valore deve essere numerico",
-    "fieldInvalid": "Questo campo non è valido",
-    "fieldTwoDecimals": "Il campo deve contenere due decimali.",
-    "fieldInteger": "Il campo deve essere un numero intero.",
-    "fieldValidEmail": "Il campo deve essere un email valido.",
-    "postalCodeNotCorrect.": "Il codice postale non è corretto.",
-    "fieldValidPhone": "Questo campo deve contenere un numero di telefono valido."
-  },
-  "parcelSettings": {
-    "defaultParcel": "Pacco predefinito",
-    "setDefaultParcel": "Imposta pacco predefinito",
-    "defaultParcelInfo": "Utilizzeremo il pacco predefinito nel caso in cui un prodotto non abbia dimensioni e peso definiti. Potrai modificarlo in qualsiasi momento.",
+    "title-onboarding": "",
+    "description-onboarding": "",
+    "title-config": "",
+    "description-config": "",
     "weight": "Peso",
-    "width": "Largezza",
-    "length": "Lunghezza",
     "height": "Altezza",
-    "valuePositive": "Il valore deve essere maggiore di 0",
-    "saveChanges": "Salva le modifiche",
-    "weightMustBePositive": "Il peso deve essere un numero decimale positivo.",
-    "fieldMustBePositive": "Il campo deve essere un numero intero positivo."
+    "width": "Largezza",
+    "length": "Lunghezza"
   },
-  "mapOrderStatuses": {
-    "title": "Order status",
-    "description": "With Packlink you can update your % order status with shipping information. <br>You can edit it at any time.",
-    "packlinkProShipmentStatus": "Packlink PRO <strong>SHIPMENT</strong> STATUS",
-    "systemOrderStatus": "% <strong>ORDER STATUS</strong>",
+  "defaultWarehouse": {
+    "title-onboarding": "",
+    "description-onboarding": "",
+    "title-config": "",
+    "description-config": "",
+    "alias": "",
+    "alias-placeholder": "",
+    "name": "Nome della persona di contatto",
+    "name-placeholder": "",
+    "surname": "Cognome della persona di contatto",
+    "surname-placeholder": "",
+    "company": "Nome dell'azienda",
+    "company-placeholder": "",
+    "country": "",
+    "postal_code": "Città o codice postale",
+    "postal_code-placeholder": "-",
+    "address": "Indirizzo",
+    "address-placeholder": "",
+    "phone": "Numero di telefono",
+    "phone-placeholder": "",
+    "email": "Email",
+    "email-placeholder": ""
+  },
+  "configuration": {
+    "menu": "",
+    "title": "",
+    "orderStatus": "",
+    "warehouse": "",
+    "parcel": "Pacco predefinito",
+    "help": "Aiuto",
+    "contactUs": "Contattaci:",
+    "systemInfo": "Informazioni del sistema"
+  },
+  "systemInfo": {
+    "title": "",
+    "debugMode": "Debug mode",
+    "download": "Scarica il file di informazioni del sistema"
+  },
+  "orderStatusMapping": {
+    "title": "",
+    "description": "",
+    "packlinkProShipmentStatus": "STATO DELLA <strong>SPEDIZIONE</strong> di Packlink PRO",
+    "systemOrderStatus": "STATO DELLA <strong>SPEDIZIONE</strong> di %s",
     "none": "Nessuno",
     "pending": "In attesa",
     "processing": "Processando",
@@ -157,9 +160,25 @@
     "cancelled": "Annullato"
   },
   "shippingServices": {
+    "myServices": "",
+    "noServicesTitle": "",
+    "noServicesDescription": "",
+    "addService": "",
+    "addNewService": "",
+    "addedSuccessTitle": "",
+    "addedSuccessDescription": "",
+    "deletedSuccessTitle": "",
+    "deletedSuccessDescription": "",
+    "disableCarriersTitle": "",
+    "disableCarriersDescription": "",
     "successfullyDisabledShippingMethods": "Servizi di spedizione disattivati correttamente.",
     "failedToDisableShippingMethods": "Impossibile disattivare i servizi di spedizione.",
-    "pickShippingService": "Add delivery services",
+    "pickShippingService": "",
+    "failedGettingServicesTitle": "",
+    "failedGettingServicesSubtitle": "",
+    "retry": "",
+    "filterModalTitle": "",
+    "applyFilters": "",
     "type": "Tipo",
     "national": "Nazionale",
     "international": "Internazionale",
@@ -172,55 +191,60 @@
     "parcelDestination": "Destinazione pacco",
     "pickup": "Consegna al domicilio",
     "delivery": "Consegna in punto corriere",
-    "carrier": "Corriere",
     "carrierLogo": "Logo del corriere",
+    "carrier": "Corriere",
+    "serviceTitle": "Titolo del servizio",
+    "serviceTitleDescription": "",
     "transitTime": "Tempi di transito",
     "origin": "Origine",
     "destination": "Destinazione",
+    "myPrices": "",
     "packlinkPrices": "Prezzi di Packlink",
-    "tax": "Tassa",
-    "serviceTitle": "Titolo del servizio",
+    "configureService": "",
     "showCarrierLogo": "Mostra logo del corriere ai miei clienti",
-    "increase": "Aumenta",
-    "reduce": "Diminuisci",
-    "by": "del",
+    "pricePolicy": "",
+    "pricePolicyDescription": "",
+    "configurePricePolicy": "",
+    "taxClassTitle": "",
+    "tax": "Tassa",
+    "serviceCountriesTitle": "",
+    "serviceCountriesDescription": "",
+    "openCountries": "",
+    "allCountriesSelected": "",
+    "oneCountrySelected": "",
+    "selectedCountries": "",
+    "firstPricePolicyDescription": "",
+    "addFirstPolicy": "",
+    "addAnotherPolicy": "",
     "from": "Da",
     "to": "A",
     "price": "Prezzo",
-    "select": "Sélectionner"
-  },
-  "shippingServicesSettings": {
-    "filterServices": "Filtra i servizi",
-    "addServiceTitle": "Aggiungi il titolo del servizio",
-    "titleWillBeVisible": "Questo titolo sarà visibile ai tuoi clienti",
-    "selectPricingPolicy": "Seleziona la politica dei prezzi",
-    "choosePricingPolicy": "Scegli la politica dei prezzi da mostrare ai tuoi clienti",
-    "percentagePacklinkPrices": "% dei prezzi di Packlink",
-    "fixedPrices": "Prezzo fisso",
-    "packlinkPercent": "Percentuale di Packlink",
-    "configure": "Configura",
-    "allShippingServices": "Tutti i servizi di spedizione",
-    "selectedShippingServices": "Servizi di spedizione selezionati",
-    "select": "Seleziona",
-    "shippingServices": "Servizi di spedizione",
-    "showingPercentsResults": "Mostrando %s risultati",
-    "setPricingRule": "Si prega di impostare la regola dei prezzi",
-    "addPriceForWeightCriteria": "Si prega di aggiungere il prezzo per ciascun criterio di peso",
-    "addPriceForPriceCriteria": "Si prega di aggiungere il costo per ogni criterio di prezzo",
-    "fixedPricesTotalWeight": "Prezzi fissi basati sul peso totale",
-    "fixedPricesTotalPrice": "Prezzi fissi basati sul prezzo totale",
-    "addPrice": "Aggiungi prezzo",
-    "gettingAvailableShippingService": "Stiamo cercando i servizi di spedizione disponibili su Packlink PRO. Per favore aspetta un istante.",
-    "shippingServiceSuccessfullySaved": "Servizio di spedizione salvato con successo.",
-    "congrats": "Congratulazioni! Il tuo primo servizio di spedizione è stato creato correttamente. ",
-    "disablePreviousCarriers": "Per offrirti il miglior servizio è importante disabilitare i tuoi corrieri precedenti. Vuoi che li disabilitiamo? (opzione consigliata)",
-    "shippingMethodSuccessfullySelected.": "Servizio di spedizione selezionato con successo.",
-    "failedToDeselectShippingMethod": "Impossibile deselezionare il servizio di spedizione.",
-    "shippingMethodSuccessfullyDeselected": "Servizio di spedizione deselezionato correttamente.",
-    "failedToSaveShippingMethod": "Impossibile salvare il metodo di servizio.",
-    "failedToActivateShippingMethod": "Impossibile attivare il servizio di spedizione.",
-    "successfullyDeletedShippingMethods": "Servizio di spedizione eliminato correttamente.",
-    "shippingMethodsDeleteFailed": "Errore nella cancellazione del servizio di spedizione."
+    "rangeTypeExplanation": "",
+    "rangeType": "",
+    "priceRange": "",
+    "priceRangeWithData": "",
+    "weightRange": "",
+    "weightRangeWithData": "",
+    "weightAndPriceRange": "",
+    "weightAndPriceRangeWithData": "",
+    "singlePricePolicy": "",
+    "pricePolicyExplanation": "",
+    "packlinkPrice": "",
+    "percentagePacklinkPrices": "",
+    "percentagePacklinkPricesWithData": "",
+    "fixedPrices": "",
+    "fixedPricesWithData": "",
+    "increaseExplanation": "",
+    "reduceExplanation": "",
+    "select": "Sélectionner",
+    "invalidRange": "",
+    "increase": "Aumenta",
+    "reduce": "Diminuisci",
+    "selectAllCountries": "",
+    "selectCountriesHeader": "",
+    "selectCountriesSubheader": "",
+    "usePacklinkRange": "",
+    "discardChangesQuestion": ""
   },
   "orderListAndDetails": {
     "packlinkOrderDraft": "Bozza dell'ordine Packlink",
