--- a/src/BusinessLogic/Resources/lang/es.json
+++ b/src/BusinessLogic/Resources/lang/es.json
@@ -22,7 +22,8 @@
     "complete": "Completar",
     "add": "Añadir",
     "edit": "Editar",
-    "delete": "Borrar"
+    "delete": "Borrar",
+    "discard": ""
   },
   "validation": {
     "requiredField": "Esta campo es obligatorio.",
@@ -30,6 +31,7 @@
     "invalidEmail": "El campo debe ser un correo electrónico válido.",
     "shortPassword": "La contraseña debe contener %s caracteres como mínimo.",
     "invalidPhone": "Este campo deber ser un número de teléfono válido.",
+    "maxLength": "",
     "numeric": "Debe ser un valor numérico.",
     "greaterThanZero": "El valor debe ser mayor que 0.",
     "nonNegative": "Field cannot have a negative value.",
@@ -67,6 +69,7 @@
     "submit": "Regístrate",
     "chooseYourCountry": "Elige tu país",
     "searchCountry": "Busca el país",
+    "invalidDeliveryVolume": "",
     "ES": "España",
     "DE": "Alemania",
     "FR": "Francia",
@@ -154,8 +157,7 @@
     "readyForShipping": "Listo para enviar",
     "inTransit": "En tránsito",
     "delivered": "Entregado",
-    "cancelled": "Cancelado",
-    "statusSetByPacklink": "Estado establecido por Packlink PRO."
+    "cancelled": "Cancelado"
   },
   "shippingServices": {
     "myServices": "Mis servicios de envío",
@@ -165,11 +167,16 @@
     "addNewService": "Añadir nuevo servicio",
     "addedSuccessTitle": "Servicio de envío añadido correctamente",
     "addedSuccessDescription": "Podrás editarlo desde la sección <strong>\"Mis servicios\"</strong>.",
+    "deletedSuccessTitle": "",
+    "deletedSuccessDescription": "",
     "disableCarriersTitle": "Has creado tu primer servicio de envío. ¿Quieres desabilitar los transportistas anteriores?",
     "disableCarriersDescription": "Para ofrecerte un mejor servicio, es importante <strong>desabilitar los transportistas</strong> que tenías previamente.",
     "successfullyDisabledShippingMethods": "Servicios de envío correctamente deseleccionados.",
     "failedToDisableShippingMethods": "Error al deshabilitar los servicios de envío.",
     "pickShippingService": "Añadir servicios de envío",
+    "failedGettingServicesTitle": "",
+    "failedGettingServicesSubtitle": "",
+    "retry": "",
     "filterModalTitle": "Filtros",
     "applyFilters": "Aplicar",
     "type": "Tipo",
@@ -184,10 +191,10 @@
     "parcelDestination": "Destino",
     "pickup": "Pick up",
     "delivery": "Entrega",
+    "carrierLogo": "Logo del transportista",
+    "carrier": "Transportista",
     "serviceTitle": "Nombre del servicio",
     "serviceTitleDescription": "Personaliza tu envío editándolo. Será visible para tus clientes.",
-    "carrier": "Transportista",
-    "carrierLogo": "Logo del transportista",
     "transitTime": "Tiempo de tránsito",
     "origin": "Origen",
     "destination": "Destino",
@@ -215,61 +222,29 @@
     "rangeTypeExplanation": "1- Elige si quieres fijarlos por el peso y/o el precio de la compra.",
     "rangeType": "Tipo de rango",
     "priceRange": "Rango de precio",
-    "weightRange": "Rango de peso",
-    "weightAndPriceRange": "Rango de peso y precio",
     "priceRangeWithData": "Rango de precio: desde %s€ hasta %s€",
+    "weightRange": "Rango de peso",
     "weightRangeWithData": "Rango de peso: desde %s kg hasta %s kg",
+    "weightAndPriceRange": "Rango de peso y precio",
     "weightAndPriceRangeWithData": "Rango de peso y precio: desde %s kg hasta %s kg y desde %s€ hasta %s€",
     "singlePricePolicy": "Política de precio %s",
     "pricePolicyExplanation": "2- Elige una política de precios y configúrala.",
     "packlinkPrice": "Precio Packlink",
-    "percentagePacklinkPricesWithData": "% de los precio de Packlink: %s por %s%",
     "percentagePacklinkPrices": "% de los precio de Packlink",
+    "percentagePacklinkPricesWithData": "% de los precio de Packlink: %s por %s%",
     "fixedPrices": "Precio fijo",
     "fixedPricesWithData": "Precio fijo: %s€",
     "increaseExplanation": "Incrementar: añade un % al precio, lo pagará el cliente.",
     "reduceExplanation": "Reducir: descuenta un % al precio, lo pagarás tú.",
     "select": "Elige",
+    "invalidRange": "",
     "increase": "incrementar",
     "reduce": "reducir",
     "selectAllCountries": "Selecionar todos los países",
     "selectCountriesHeader": "Países permitidos para tu servicio <br> de envío",
     "selectCountriesSubheader": "Selecciona la disponibilidad de al menos un país y <br> añade tantos como necesites",
-    "usePacklinkRange": "Para el resto de rangos, aplicar precios Packlink"
-  },
-  "shippingServicesSettings": {
-    "filterServices": "Filtrar servicios",
-    "addServiceTitle": "Añadir nombre de servicio",
-    "titleWillBeVisible": "Este nombre será visible para tus clientes.",
-    "selectPricingPolicy": "Seleccionar política de precios",
-    "choosePricingPolicy": "Elige la política de precios para mostrar a tus clientes.",
-    "packlinkPrices": "Precios de Packlink",
-    "percentagePacklinkPrices": "% sobre los precios de Packlink",
-    "fixedPrices": "Precios fijos",
-    "packlinkPercent": "Porcentaje de Packlink",
-    "configure": "Configurar",
-    "allShippingServices": "Todos los servicios de envío",
-    "selectedShippingServices": "Servicios de envío seleccionados",
-    "shippingServices": "Servicios de envío",
-    "showingPercentsResults": "Mostrando %s resultados",
-    "setPricingRule": "Establece como fijar el precio",
-    "addPriceForWeightCriteria": "Añade el precio para cada peso",
-    "addPriceForPriceCriteria": "Por favor, añade precio para cada criterio",
-    "fixedPricesTotalWeight": "Precios fijos en función del peso total",
-    "fixedPricesTotalPrice": "Precios fijos en función del precio total",
-    "price": "Precio",
-    "addPrice": "Añadir precio",
-    "gettingAvailableShippingService": "Buscando los servicios de envío disponibles en Packlink PRO. Por favor, espera un momento.",
-    "shippingServiceSuccessfullySaved": "Servicio de envío guardado.",
-    "congrats": "¡Enhorabuena! Ya tienes tu primer servicio de envío.",
-    "disablePreviousCarriers": "Para poder ofrecerte el mejor servicio, es importante que deshabilites a tus transportistas anteriores. ¿Quieres que los desactivemos? (recomendado)",
-    "shippingMethodSuccessfullySelected.": "Servicio de envío seleccionado correctamente.",
-    "failedToDeselectShippingMethod": "Error al anular la selección de servicio de envío.",
-    "shippingMethodSuccessfullyDeselected": "Servicio de envío correctamente deseleccionado.",
-    "failedToSaveShippingMethod": "Error al guardar el servicio de envío.",
-    "failedToActivateShippingMethod": "Error al activar el servicio de envío.",
-    "successfullyDeletedShippingMethods": "Servicios de envío correctamente eliminados.",
-    "shippingMethodsDeleteFailed": "Error al eliminar los servicios de envío."
+    "usePacklinkRange": "Para el resto de rangos, aplicar precios Packlink",
+    "discardChangesQuestion": ""
   },
   "orderListAndDetails": {
     "packlinkOrderDraft": "Borrador del pedido de Packlink",
