--- a/src/BusinessLogic/Resources/lang/fr.json
+++ b/src/BusinessLogic/Resources/lang/fr.json
@@ -15,8 +15,15 @@
     "curlIsNotInstalled": "cURL non installé ou non activé dans votre installation PHP. Cette démarche est nécessaire pour que la tâche de fond fonctionne. Veuillez l’installer et rafraîchir cette page.",
     "loading": "Chargement en cours...",
     "save": "Enregistrer",
+    "saveChanges": "Enregistrer les modifications",
+    "accept": "Accepter",
     "cancel": "Annuler",
-    "accept": "Accepter"
+    "continue": "",
+    "complete": "",
+    "add": "",
+    "edit": "",
+    "delete": "",
+    "discard": ""
   },
   "validation": {
     "requiredField": "Ce champs est obligatoire.",
@@ -24,33 +31,34 @@
     "invalidEmail": "Le champs doit être une adresse email valide",
     "shortPassword": "Le mot de passe doit comporter au moins %s lettres.",
     "invalidPhone": "Ce champs doit contenir un numéro de téléphone valide.",
+    "maxLength": "",
     "numeric": "Cette valeur doit être numérique.",
     "greaterThanZero": "La valeur doit être spérieure à 0.",
-    "nonNegative": "Field cannot have a negative value.",
+    "nonNegative": "",
     "numberOfDecimalPlaces": "Le champs doit contenir deux décimales.",
     "integer": "Le champs doit être un nombre entier.",
     "invalidCountryList": "Veuillez sélectionner les pays de destination.",
-    "invalidLanguage": "Field is not a valid language.",
-    "invalidPlatformCountry": "Field is not a valid platform country.",
-    "invalidUrl": "Field must be a valid URL.",
-    "invalidFieldValue": "Field must be set to \"%s\".",
-    "invalidMaxValue": "Maximal allowed value is %s."
+    "invalidLanguage": "",
+    "invalidPlatformCountry": "",
+    "invalidUrl": "",
+    "invalidFieldValue": "",
+    "invalidMaxValue": ""
   },
   "login": {
-    "dontHaveAccount?": "Vous n'avez pas de compte?",
-    "register": "S'inscrire",
-    "selectCountry": "Sélectionnez le pays pour commencer",
-    "yourAPIKey": "Vous pouvez trouver votre clé API sous",
-    "connectYourAccount": "Connectez votre compte",
     "apiKey": "Clé API",
-    "logIn": "Se connecter",
-    "apiKeyIncorrect": "Clé API incorrecte"
+    "apiKeyIncorrect": "Clé API incorrecte",
+    "dontHaveAccount": "",
+    "welcome": "",
+    "connectYourService": "",
+    "validateApiKey": "",
+    "chooseYourCountry": "",
+    "registerMe": ""
   },
   "register": {
     "logIn": "Se connecter",
-    "email": "Email",
+    "email": "",
     "password": "Mot de passe",
-    "haveAccount": "Already have an account?",
+    "haveAccount": "",
     "startEnjoying": "Commencez à utiliser Packlink PRO !",
     "registerAccount": "Enregistrez-vous",
     "getToKnowYou": "Nous souhaitons mieux vous connaître afin de nous adapter à vous et de vous faire une offre sur mesure",
@@ -59,8 +67,9 @@
     "termsAndConditions": "<pre>IJ’accepte les <a href=\"%s\" target=\"_blank\">Conditions de service</a> et la <a href=\"%s\" target=\"_blank\">Politique de confidentialité</a> de Packlink</pre>",
     "marketingEmails": "J’autorise Packlink Shipping S.L. à m’envoyer des communications commerciales par courriel",
     "submit": "S'inscrire",
-    "chooseYourCountry": "Choose your country",
-    "searchCountry": "Busca el pais",
+    "chooseYourCountry": "",
+    "searchCountry": "",
+    "invalidDeliveryVolume": "",
     "ES": "Spain",
     "DE": "Germany",
     "FR": "France",
@@ -75,79 +84,73 @@
     "HU": "Hungary"
   },
   "onboardingWelcome": {
-    "header": "Let's set up basic information so that you can make shipments",
-    "steps": "It's just two steps that we need to go through to offer you the carrier that best suits your needs",
-    "stepOne": "Set parcel details",
-    "stepTwo": "Set sender's address",
-    "startSetUp": "Start set up"
+    "header": "",
+    "steps": "",
+    "stepOne": "",
+    "stepTwo": "",
+    "startSetUp": ""
   },
   "onboardingOverview": {
-    "header": "Almost there! Please check that the information entered is correct, or complete it in order to continue.",
-    "parcelDetails": "Parcel details",
-    "senderAddress": "Sender's Address",
-    "missingInfo": "Missing information",
-    "parcelData": "Weight %s kg | Height %s cm | Width %s cm | Length %s cm",
+    "header": "",
+    "parcelDetails": "",
+    "senderAddress": "",
+    "missingInfo": "",
+    "parcelData": "Poids %s kg | Hauteur %s cm | Largeur %s cm | Longueur %s cm",
     "warehouseData": "%s | %s | %s"
   },
   "defaultParcel": {
-    "weight": "Weight",
-    "height": "Height",
-    "width": "Width",
-    "length": "Length",
-    "save": "Save"
-  },
-  "onboardingParcel": {
-    "header": "Set parcel details",
-    "info": "We will use this default data for <strong>items that do not have defined <br> dimensions and weight.</strong> You can edit them whenever you like <br> via the settings tab."
-  },
-  "dashboard": {
-    "almostThere": "Vous y êtes presque!",
-    "detailsSynced": "Données synchonisées avec votre compte Packlink PRO",
-    "setDefaultParcel": "Définir les paramètres par défaut de vos colis",
-    "setDefaultWarehouse": "Définir l'adresse par défaut",
-    "justFewMoreSteps": "Il ne reste que quelques étapes pour compléter votre configuration",
-    "selectShippingServices": "Sélectionnez les services d'envoi"
-  },
-  "warehouseSettings": {
-    "defaultWarehouse": "Adresse par défaut",
-    "setDefaultWarehouse": "Définir l'adresse par défaut",
-    "defaultWarehouseAddress": "Nous allons utiliser l'adresse de l'entrepôt par défaut comme adresse d'expéditeur. Vous pouvez la modifier à n'importe quel moment",
-    "warehouseName": "Nom de l'adresse par défaut",
-    "contactPersonName": "Prénom de la personne à contacter",
-    "contactPersonSurname": "Nom de la personne à contacter",
-    "companyName": "Nom de l'entreprise",
-    "cityOrPostal": "Ville ou code postal",
-    "address": "Adresse",
-    "phone": "Numéro de téléphone",
-    "email": "Email",
-    "saveChanges": "Enregistrer les modifications",
-    "fieldRequired": "Ce champs est obligatoire",
-    "fieldValidNumber": "Cette valeur doit être numérique",
-    "fieldInvalid": "Ce champs n'est pas valide",
-    "fieldTwoDecimals": "Le champs doit contenir deux décimales",
-    "fieldInteger": "Le champs doit être un nombre entier",
-    "fieldValidEmail": "Le champs doit être une adresse email valide",
-    "postalCodeNotCorrect.": "Code postal invalide",
-    "fieldValidPhone": "Ce champs doit contenir un numéro de téléphone valide"
-  },
-  "parcelSettings": {
-    "defaultParcel": "Colis par défaut",
-    "setDefaultParcel": "Définir les paramètres de colis par défaut",
-    "defaultParcelInfo": "Nous allons utiliser les paramètres de colis par défaut pour chaque article dont les dimensions et le poids n'ont pas été définis. Vous pouvez modifier à n'importe quel moment.",
+    "title-onboarding": "",
+    "description-onboarding": "",
+    "title-config": "",
+    "description-config": "",
     "weight": "Poids",
-    "width": "Largeur",
-    "length": "Longueur",
     "height": "Hauteur",
-    "valuePositive": "La valeur doit être spérieure à 0",
-    "saveChanges": "Enregistrer les modifications",
-    "weightMustBePositive": "Le poids doit être un nombre décimal positif.",
-    "fieldMustBePositive": "Le champ doit être un nombre entier positif."
+    "width": "Largeur",
+    "length": "Longueur"
   },
-  "mapOrderStatuses": {
-    "title": "Order status",
-    "description": "With Packlink you can update your % order status with shipping information. <br>You can edit it at any time.",
-    "packlinkProShipmentStatus": "Packlink PRO <strong>SHIPMENT</strong> STATUS",
-    "systemOrderStatus": "% <strong>ORDER STATUS</strong>",
+  "defaultWarehouse": {
+    "title-onboarding": "",
+    "description-onboarding": "",
+    "title-config": "",
+    "description-config": "",
+    "alias": "",
+    "alias-placeholder": "",
+    "name": "Prénom de la personne à contacter",
+    "name-placeholder": "",
+    "surname": "Nom de la personne à contacter",
+    "surname-placeholder": "",
+    "company": "Nom de l'entreprise",
+    "company-placeholder": "",
+    "country": "",
+    "postal_code": "Ville ou code postal",
+    "postal_code-placeholder": "-",
+    "address": "Adresse",
+    "address-placeholder": "",
+    "phone": "Numéro de téléphone",
+    "phone-placeholder": "",
+    "email": "Email",
+    "email-placeholder": ""
+  },
+  "configuration": {
+    "menu": "",
+    "title": "",
+    "orderStatus": "",
+    "warehouse": "",
+    "parcel": "Colis par défaut",
+    "help": "Aide",
+    "contactUs": "Contactez-nous:",
+    "systemInfo": "Informations du système"
+  },
+  "systemInfo": {
+    "title": "",
+    "debugMode": "Debug mode",
+    "download": "Téléchargez le document d'information système"
+  },
+  "orderStatusMapping": {
+    "title": "",
+    "description": "",
+    "packlinkProShipmentStatus": "STATUT DE <strong>LIVRAISON</strong> Packlink PRO",
+    "systemOrderStatus": "STATUT DE LA <strong>COMMANDE</strong> %s",
     "none": "Aucun",
     "pending": "En attente",
     "processing": "En cours de traitement",
@@ -157,9 +160,25 @@
     "cancelled": "Annulé"
   },
   "shippingServices": {
+    "myServices": "",
+    "noServicesTitle": "",
+    "noServicesDescription": "",
+    "addService": "",
+    "addNewService": "",
+    "addedSuccessTitle": "",
+    "addedSuccessDescription": "",
+    "deletedSuccessTitle": "",
+    "deletedSuccessDescription": "",
+    "disableCarriersTitle": "",
+    "disableCarriersDescription": "",
     "successfullyDisabledShippingMethods": "Service d'envoi désactivé avec succès. ",
     "failedToDisableShippingMethods": "Échec de la désactivation du service d'envoi.",
-    "pickShippingService": "Add delivery services",
+    "pickShippingService": "",
+    "failedGettingServicesTitle": "",
+    "failedGettingServicesSubtitle": "",
+    "retry": "",
+    "filterModalTitle": "",
+    "applyFilters": "",
     "type": "Type",
     "national": "National",
     "international": "International",
@@ -172,53 +191,60 @@
     "parcelDestination": "Destination du colis",
     "pickup": "Point de retrait",
     "delivery": "Livraison à domicile",
-    "packlinkPrices": "Prix Packlink",
+    "carrierLogo": "Logo du transporteur",
     "carrier": "Transporteur",
+    "serviceTitle": "",
+    "serviceTitleDescription": "",
     "transitTime": "Temps de transit",
     "origin": "Origine",
     "destination": "Destination",
-    "carrierLogo": "Logo du transporteur",
+    "myPrices": "",
+    "packlinkPrices": "Prix Packlink",
+    "configureService": "",
     "showCarrierLogo": "Montrer le logo du transporteur à mes clients",
+    "pricePolicy": "",
+    "pricePolicyDescription": "",
+    "configurePricePolicy": "",
+    "taxClassTitle": "",
     "tax": "Taxe",
-    "increase": "Augmenter",
-    "reduce": "Réduire",
-    "by": "Par",
+    "serviceCountriesTitle": "",
+    "serviceCountriesDescription": "",
+    "openCountries": "",
+    "allCountriesSelected": "",
+    "oneCountrySelected": "",
+    "selectedCountries": "",
+    "firstPricePolicyDescription": "",
+    "addFirstPolicy": "",
+    "addAnotherPolicy": "",
     "from": "De",
     "to": "À",
     "price": "Prix",
-    "select": "Sélectionner"
-  },
-  "shippingServicesSettings": {
-    "filterServices": "Filtrer les services",
-    "addServiceTitle": "Ajouter un titre de service",
-    "titleWillBeVisible": "Ce titre sera visible par vos clients",
-    "serviceTitle": "Titre du service",
-    "selectPricingPolicy": "Sélectionner une politique de prix",
-    "choosePricingPolicy": "Choisir la politique de prix à montrer à vos clients",
-    "percentagePacklinkPrices": "% des prix Packlink",
-    "fixedPrices": "Prix fixes",
-    "packlinkPercent": "Pourcentage Packlink",
-    "configure": "Configurer",
-    "allShippingServices": "Tous les services de livraison",
-    "selectedShippingServices": "Services de livraison sélectionnés",
-    "shippingServices": "Services de livraison",
-    "showingPercentsResults": "Montrer %s les résultats",
-    "setPricingRule": "Veuillez définir une règle de prix",
-    "addPriceForWeightCriteria": "Veuillez ajouter un prix pour chaque critère de poids",
-    "addPriceForPriceCriteria": "Veuillez ajouter un prix pour chaque critère de prix",
-    "fixedPricesTotalWeight": "Prix fixes basés sur le poids total",
-    "fixedPricesTotalPrice": "Prix fixes basés sur le prix total",
-    "addPrice": "Ajouter un prix",
-    "gettingAvailableShippingService": "En cours d'obtention de services de livraison de Packlink PRO. Veuillez patienter un moment. ",
-    "shippingServiceSuccessfullySaved": "Service de livraison enregistré avec succès.",
-    "congrats": "Félicitations! Votre premier service d'envoi a été créé avec succès.",
-    "shippingMethodSuccessfullySelected.": "Mode d'envoi sélectionné avec succès.",
-    "failedToDeselectShippingMethod": "Échec de l'annulation du service d'envoi.",
-    "shippingMethodSuccessfullyDeselected": "Service d'envoi annulé avec succès.",
-    "failedToSaveShippingMethod": "Échec de l'enregistrement du service d'envoi.",
-    "failedToActivateShippingMethod": "Échec de l'activation du service d'envoi. ",
-    "successfullyDeletedShippingMethods": "Service d'envoi supprimé avec succès.",
-    "shippingMethodsDeleteFailed": "Échec de la suppression du service d'envoi."
+    "rangeTypeExplanation": "",
+    "rangeType": "",
+    "priceRange": "",
+    "priceRangeWithData": "",
+    "weightRange": "",
+    "weightRangeWithData": "",
+    "weightAndPriceRange": "",
+    "weightAndPriceRangeWithData": "",
+    "singlePricePolicy": "",
+    "pricePolicyExplanation": "",
+    "packlinkPrice": "",
+    "percentagePacklinkPrices": "",
+    "percentagePacklinkPricesWithData": "",
+    "fixedPrices": "",
+    "fixedPricesWithData": "",
+    "increaseExplanation": "",
+    "reduceExplanation": "",
+    "select": "Sélectionner",
+    "invalidRange": "",
+    "increase": "Augmenter",
+    "reduce": "Réduire",
+    "selectAllCountries": "",
+    "selectCountriesHeader": "",
+    "selectCountriesSubheader": "",
+    "usePacklinkRange": "",
+    "discardChangesQuestion": ""
   },
   "orderListAndDetails": {
     "packlinkOrderDraft": "Brouillon de commande Packlink",
