Fix placeholder value
Issue: PLCR1801-87

--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -118,7 +118,7 @@
     "name": "Name of contact person",
     "name-placeholder": "Name",
     "surname": "Surname of contact person",
-    "surname-placeholder": "surname",
+    "surname-placeholder": "Surname",
     "company": "Company name",
     "company-placeholder": "Company",
     "country": "Country",
